# meal-calorie-fastapi-rahul-kumar

./: .env.example  README.md  pyproject.toml
app/: main.py
app/adapters/db/: sqlalchemy_user_repository.py
app/adapters/http/: usda_client.py
app/controllers/: auth.py  calories.py
app/core/: config.py  constants.py  rate_limit.py  security.py
app/db/: session.py
app/db/migrations/: env.py
app/models/: user.py
app/ports/: food_search.py  user_repository.py
app/schemas/: auth.py  calories.py
app/services/: auth_service.py  calorie_service.py
app/utils/: calorie_estimation_utils.py
tests/: conftest.py  factories.py
tests/integration/: test_auth_service_api.py  test_calories_service_api.py  test_health_api.py
tests/unit/: test.db  test_calorie_service.py  test_calorie_utils.py  test_security.py  test_user_repository.py
